// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gerarZPL > gera o ZPL com nome de produto longo (quebra em 2 linhas) 1`] = `
"^XA
^SZ2
^PW480
^LL320
^CI28
^FO14,10^A0N,18,18^FDSANTO FAVO 26^FS
^FO14,34^A0N,38,38^FB296,2,2,L,0^FDGANACHE DE CHOCOLATE MEIO AMARGO 70% COM FLOR DE SAL ARTESANAL^FS
^FO14,124^GB296,2,2,B,0^FS
^FO14,138^A0N,16,16^FDCONSERVAÇÃO^FS
^FO14,157^A0N,28,28^FB296,1,0,L,0^FDRefrigerado 0–4 °C^FS
^FO14,198^A0N,16,16^FDMANIPULAÇÃO^FS
^FO14,217^A0N,28,28^FB296,1,0,L,0^FD05/03/2026^FS
^FO14,258^A0N,16,16^FDRESPONSÁVEL^FS
^FO14,277^A0N,28,28^FB296,1,0,L,0^FDMaria^FS
^FO324,0^GB156,320,156,B,0^FS
^FO324,34^A0N,22,22^FB156,1,0,C,0^FR^FDVALIDADE^FS
^FO324,120^A0N,70,58^FB156,1,0,C,0^FR^FD12/03^FS
^FO324,200^A0N,56,48^FB156,1,0,C,0^FR^FD2026^FS
^PQ1
^XZ"
`;

exports[`gerarZPL > gera o ZPL congelado com virada de ano 1`] = `
"^XA
^SZ2
^PW480
^LL320
^CI28
^FO14,10^A0N,18,18^FDSANTO FAVO 26^FS
^FO14,34^A0N,38,38^FB296,2,2,L,0^FDGANACHE DE CHOCOLATE^FS
^FO14,124^GB296,2,2,B,0^FS
^FO14,138^A0N,16,16^FDCONSERVAÇÃO^FS
^FO14,157^A0N,28,28^FB296,1,0,L,0^FDCongelado -18 °C^FS
^FO14,198^A0N,16,16^FDMANIPULAÇÃO^FS
^FO14,217^A0N,28,28^FB296,1,0,L,0^FD28/12/2026^FS
^FO14,258^A0N,16,16^FDRESPONSÁVEL^FS
^FO14,277^A0N,28,28^FB296,1,0,L,0^FDMaria^FS
^FO324,0^GB156,320,156,B,0^FS
^FO324,34^A0N,22,22^FB156,1,0,C,0^FR^FDVALIDADE^FS
^FO324,120^A0N,70,58^FB156,1,0,C,0^FR^FD28/03^FS
^FO324,200^A0N,56,48^FB156,1,0,C,0^FR^FD2027^FS
^PQ1
^XZ"
`;

exports[`gerarZPL > gera o ZPL de abertura, com rótulo ABERTURA em vez de MANIPULAÇÃO 1`] = `
"^XA
^SZ2
^PW480
^LL320
^CI28
^FO14,10^A0N,18,18^FDSANTO FAVO 26^FS
^FO14,34^A0N,38,38^FB296,2,2,L,0^FDGANACHE DE CHOCOLATE^FS
^FO14,124^GB296,2,2,B,0^FS
^FO14,138^A0N,16,16^FDCONSERVAÇÃO^FS
^FO14,157^A0N,28,28^FB296,1,0,L,0^FDRefrigerado 0–4 °C^FS
^FO14,198^A0N,16,16^FDABERTURA^FS
^FO14,217^A0N,28,28^FB296,1,0,L,0^FD14/08/2026^FS
^FO14,258^A0N,16,16^FDRESPONSÁVEL^FS
^FO14,277^A0N,28,28^FB296,1,0,L,0^FDMaria^FS
^FO324,0^GB156,320,156,B,0^FS
^FO324,34^A0N,22,22^FB156,1,0,C,0^FR^FDVALIDADE^FS
^FO324,120^A0N,70,58^FB156,1,0,C,0^FR^FD19/08^FS
^FO324,200^A0N,56,48^FB156,1,0,C,0^FR^FD2026^FS
^PQ1
^XZ"
`;

exports[`gerarZPL > gera o ZPL do caso normal 1`] = `
"^XA
^SZ2
^PW480
^LL320
^CI28
^FO14,10^A0N,18,18^FDSANTO FAVO 26^FS
^FO14,34^A0N,38,38^FB296,2,2,L,0^FDGANACHE DE CHOCOLATE^FS
^FO14,124^GB296,2,2,B,0^FS
^FO14,138^A0N,16,16^FDCONSERVAÇÃO^FS
^FO14,157^A0N,28,28^FB296,1,0,L,0^FDRefrigerado 0–4 °C^FS
^FO14,198^A0N,16,16^FDMANIPULAÇÃO^FS
^FO14,217^A0N,28,28^FB296,1,0,L,0^FD05/03/2026^FS
^FO14,258^A0N,16,16^FDRESPONSÁVEL^FS
^FO14,277^A0N,28,28^FB296,1,0,L,0^FDMaria^FS
^FO324,0^GB156,320,156,B,0^FS
^FO324,34^A0N,22,22^FB156,1,0,C,0^FR^FDVALIDADE^FS
^FO324,120^A0N,70,58^FB156,1,0,C,0^FR^FD12/03^FS
^FO324,200^A0N,56,48^FB156,1,0,C,0^FR^FD2026^FS
^PQ1
^XZ"
`;
